@@ -1,30 +1,39 @@
 package no.unit.nva.bare;
 
+import org.apache.http.client.utils.URIBuilder;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 
 public class BareConnection {
 
-    private static final transient String bareUrl = "https://authority.bibsys.no/authority/rest/functions/v2/query?";
-    private static final transient char amp = '&';
+    public static final String HTTPS = "https";
+    public static final String BARE_HOST = "authority.bibsys.no";
+    public static final String BARE_PATH = "/authority/rest/functions/v2/query";
 
     protected InputStreamReader connect(URL url) throws IOException {
         return new InputStreamReader(url.openStream());
     }
 
-    protected URL generateQueryUrl(String authorityName) throws UnsupportedEncodingException, MalformedURLException {
+    protected URL generateQueryUrl(String authorityName)
+            throws MalformedURLException, UnsupportedEncodingException, URISyntaxException {
         final String authoritytype = " authoritytype:person";
-        final String q = "q=" + URLEncoder.encode(authorityName + authoritytype, StandardCharsets.UTF_8.toString());
-        final String start = "start=1";
-        final String max = "max=10";
-        final String format = "format=json";
-        final String address = bareUrl + q + amp + start + amp + max + amp + format;
-        return new URL(address);
+        URI uri = new URIBuilder()
+                .setScheme(HTTPS)
+                .setHost(BARE_HOST)
+                .setPath(BARE_PATH)
+                .setParameter("q", URLEncoder.encode(authorityName + authoritytype, StandardCharsets.UTF_8.toString()))
+                .setParameter("start", "1")
+                .setParameter("max", "10")
+                .setParameter("format", "json")
+                .build();
+        return uri.toURL();
     }
 
 }
